<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textExpression"
        android:layout_width="0dp"
        android:layout_height="@dimen/expression_height"
        android:ellipsize="start"
        android:gravity="end"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="0dp"
        android:layout_height="@dimen/result_height"
        android:ellipsize="end"
        android:gravity="end"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textExpression" />

    <TextView
        android:id="@+id/textClear"
        style="@style/ActionButton"
        android:text="@string/clear"
        app:layout_constraintBottom_toTopOf="@id/textSeven"
        app:layout_constraintEnd_toStartOf="@id/textOpen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textResult"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textOpen"
        style="@style/ActionButton"
        android:text="@string/open"
        app:layout_constraintBottom_toTopOf="@id/textEight"
        app:layout_constraintEnd_toStartOf="@id/textClose"
        app:layout_constraintStart_toEndOf="@id/textClear"
        app:layout_constraintTop_toBottomOf="@id/textResult" />

    <TextView
        android:id="@+id/textClose"
        style="@style/ActionButton"
        android:text="@string/close"
        app:layout_constraintBottom_toTopOf="@id/textNine"
        app:layout_constraintEnd_toStartOf="@id/textDiv"
        app:layout_constraintStart_toEndOf="@id/textOpen"
        app:layout_constraintTop_toBottomOf="@id/textResult" />

    <TextView
        android:id="@+id/textDiv"
        style="@style/ActionButton"
        android:text="@string/div"
        app:layout_constraintBottom_toTopOf="@id/textTimes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textClose"
        app:layout_constraintTop_toBottomOf="@id/textResult" />

    <TextView
        android:id="@+id/textSeven"
        style="@style/NumberButton"
        android:text="@string/seven"
        app:layout_constraintBottom_toTopOf="@id/textFour"
        app:layout_constraintEnd_toStartOf="@id/textEight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textClear" />

    <TextView
        android:id="@+id/textEight"
        style="@style/NumberButton"
        android:text="@string/eight"
        app:layout_constraintBottom_toTopOf="@id/textFive"
        app:layout_constraintEnd_toStartOf="@id/textNine"
        app:layout_constraintStart_toEndOf="@id/textSeven"
        app:layout_constraintTop_toBottomOf="@id/textOpen" />

    <TextView
        android:id="@+id/textNine"
        style="@style/NumberButton"
        android:text="@string/nine"
        app:layout_constraintBottom_toTopOf="@id/textSix"
        app:layout_constraintEnd_toStartOf="@id/textTimes"
        app:layout_constraintStart_toEndOf="@id/textEight"
        app:layout_constraintTop_toBottomOf="@id/textClose" />

    <TextView
        android:id="@+id/textTimes"
        style="@style/ActionButton"
        android:text="@string/times"
        app:layout_constraintBottom_toTopOf="@id/textMinus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textNine"
        app:layout_constraintTop_toBottomOf="@id/textDiv" />

    <TextView
        android:id="@+id/textFour"
        style="@style/NumberButton"
        android:text="@string/four"
        app:layout_constraintBottom_toTopOf="@id/textOne"
        app:layout_constraintEnd_toStartOf="@id/textFive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textSeven" />

    <TextView
        android:id="@+id/textFive"
        style="@style/NumberButton"
        android:text="@string/five"
        app:layout_constraintBottom_toTopOf="@id/textTwo"
        app:layout_constraintEnd_toStartOf="@id/textSix"
        app:layout_constraintStart_toEndOf="@id/textFour"
        app:layout_constraintTop_toBottomOf="@id/textEight" />

    <TextView
        android:id="@+id/textSix"
        style="@style/NumberButton"
        android:text="@string/six"
        app:layout_constraintBottom_toTopOf="@id/textThree"
        app:layout_constraintEnd_toStartOf="@id/textMinus"
        app:layout_constraintStart_toEndOf="@id/textFive"
        app:layout_constraintTop_toBottomOf="@id/textNine" />

    <TextView
        android:id="@+id/textMinus"
        style="@style/ActionButton"
        android:text="@string/minus"
        app:layout_constraintBottom_toTopOf="@id/textPlus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textSix"
        app:layout_constraintTop_toBottomOf="@id/textTimes" />

    <TextView
        android:id="@+id/textOne"
        style="@style/NumberButton"
        android:text="@string/one"
        app:layout_constraintBottom_toTopOf="@id/textDot"
        app:layout_constraintEnd_toStartOf="@id/textTwo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFour" />

    <TextView
        android:id="@+id/textTwo"
        style="@style/NumberButton"
        android:text="@string/two"
        app:layout_constraintBottom_toTopOf="@id/textZero"
        app:layout_constraintEnd_toStartOf="@id/textThree"
        app:layout_constraintStart_toEndOf="@id/textOne"
        app:layout_constraintTop_toBottomOf="@id/textFive" />

    <TextView
        android:id="@+id/textThree"
        style="@style/NumberButton"
        android:text="@string/three"
        app:layout_constraintBottom_toTopOf="@id/textBack"
        app:layout_constraintEnd_toStartOf="@id/textPlus"
        app:layout_constraintStart_toEndOf="@id/textTwo"
        app:layout_constraintTop_toBottomOf="@id/textSix" />

    <TextView
        android:id="@+id/textPlus"
        style="@style/ActionButton"
        android:text="@string/plus"
        app:layout_constraintBottom_toTopOf="@id/textEqual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textThree"
        app:layout_constraintTop_toBottomOf="@id/textMinus" />

    <TextView
        android:id="@+id/textDot"
        style="@style/NumberButton"
        android:text="@string/dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textZero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textOne" />

    <TextView
        android:id="@+id/textZero"
        style="@style/NumberButton"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textBack"
        app:layout_constraintStart_toEndOf="@id/textDot"
        app:layout_constraintTop_toBottomOf="@id/textTwo" />

    <ImageView
        android:id="@+id/textBack"
        style="@style/NumberButton"
        android:scaleType="center"
        android:src="@drawable/ic_backspace_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textEqual"
        app:layout_constraintStart_toEndOf="@id/textZero"
        app:layout_constraintTop_toBottomOf="@id/textThree" />

    <TextView
        android:id="@+id/textEqual"
        style="@style/ActionButton"
        android:text="@string/equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textBack"
        app:layout_constraintTop_toBottomOf="@id/textPlus" />

</android.support.constraint.ConstraintLayout>
